Bug 57090 - UI: Visual glitches with the new Widget Layout: Buttons cut off in "Insert Table" dialog
Summary: UI: Visual glitches with the new Widget Layout: Buttons cut off in "Insert Ta...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.0.0.alpha0+ Master
Hardware: x86-64 (AMD64) macOS (All)
: medium minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.0.0
Keywords:
Depends on:
Blocks: mab4.0
  Show dependency treegraph
 
Reported: 2012-11-13 19:31 UTC by Roman Eisele
Modified: 2012-11-22 15:58 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot: Visual glitches in "Insert Table" dialog, LOdev 2012-11-13 on Mac OS X 10.6.8 (33.26 KB, image/png)
2012-11-13 19:31 UTC, Roman Eisele
Details
Screenshot: Visual glitches in "Insert Table" dialog fixed by resizing the dialog window (36.30 KB, image/png)
2012-11-13 19:57 UTC, Roman Eisele
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Eisele 2012-11-13 19:31:08 UTC
Created attachment 70024 [details]
Screenshot: Visual glitches in "Insert Table" dialog, LOdev 2012-11-13 on Mac OS X 10.6.8

The new Widget Layout is wondeful, but some dialog windows converted to the new .ui format show minor visual glitches, at least on Mac OS X 10.6.8 (Intel). Resetting the LibreOffice/LOdev user profile does not change this situation.

1) The “Insert Table” dialog window, available in Writer via “Table > Insert > Table...”, shows the three buttons “OK”, “Cancel” and “Help” at the right side cut off at their left side, and the button “AutoFormat” (at the bottom of the window) cutt off at its bottom. It is necessary to enlarge the dialog window manually by about 10px to the right and to the bottom in order to make the buttons to appear correctly.

See the attached screenshot.

Tested with LOdev 4.0.0.0.alpha0+ (Build ID: 32315e; pull time: 2012-11-13 00:32:26) on Mac OS X 10.6.8 (Intel).
Comment 1 Roman Eisele 2012-11-13 19:57:03 UTC
Created attachment 70027 [details]
Screenshot: Visual glitches in "Insert Table" dialog fixed by resizing the dialog window
Comment 2 Jean-Baptiste Faure 2012-11-13 21:46:51 UTC
I do not reproduce on Ubuntu 12.04 x86_64 with version 4.0.0.0.alpha0+ (Build ID: 12fa9e).

Best regards. JBF
Comment 3 Roman Eisele 2012-11-14 08:21:06 UTC
@ Jean-Baptiste Faure:
Thank you for testing! So this seems to be a MacOS-only issue ... It would be great, if someone else could test Windows.
Comment 4 Caolán McNamara 2012-11-14 12:19:06 UTC
Yeah, its a mac only problem. There's some "exciting" use of borders in macosx
Comment 5 Not Assigned 2012-11-14 13:23:50 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=18f08d180db8e821f5c39359e08c177bcfecb58b

Resolves: fdo#57090 visual glitches on MacOSX with borders + layout



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Caolán McNamara 2012-11-14 13:26:52 UTC
I have high hopes that this works :-)
Comment 7 Roman Eisele 2012-11-14 15:10:27 UTC
(In reply to comment #6)
> I have high hopes that this works :-)

Thank you very much! I am eager to test the next daily build ...
Comment 8 Roman Eisele 2012-11-15 10:40:48 UTC
VERIFIED as FIXED
with LOdev 4.0.0.0.alpha0+ (Build ID: ed8067; pull time: 2012-11-15 03:54:19)
on Mac OS X 10.6.8 (Intel).

The “Insert Table” dialog looks fine now by default: all buttons are completely visible.

@ Caolán:
Thank you very much again! I will check if similar problems in other dialog windows are fixed now, too ...
Comment 9 Roman Eisele 2012-11-17 16:36:40 UTC
Caolán’s patch has also removed similar visual glitches in many other dialog windows. Here is a short list of visual problems which I had noticed in LOdev 4.0.0.0.alpha0+ (Build ID: 32315e; pull time: 2012-11-13 00:32:26) on Mac OS X 10.6.8 (Intel), but are no longer present in LOdev 4.0.0.0.alpha0+ (Build ID: ed8067; pull time: 2012-11-15 03:54:19):

* Writer, “Insert Rows” dialog: buttons were cut off at their left
  side before, now they are OK
* Writer, “Insert Columns” dialog: buttons were cut off at their left side
  before, now they are OK
* Writer, “Line numbering” dialog: focus ring of separator “Every” edit field
  was cut off by button, now OK
* Writer, “Convert Text to Table” dialog: button “AutoFormat…” was cut off
  at the top before, now OK
* Writer, “Sort” dialog: buttons and popup menu “Language” were cut off
  before, now they are OK
* Writer, “Title Page” dialog: plus/minus control was heavily cut off
  (barely visible!), now it is OK

* General UI, “Floating Frame Properties” dialog: buttons were heavily
  cut off at their top before, now they are OK
* General UI, “Thesaurus” dialog: “Replace with” edit field, focus ring
  was cut off by buttons, now OK
* General UI, “Zoom & View Layout” dialog: plus/minus control was heeavily
  cut off, now it is OK

Thank you again, Caolán!
Comment 10 Julien Nabet 2012-11-20 21:30:54 UTC
Caolán: any chance to cherry pick this commit to 3.6 branch?
As Roman said, it seems your commit fixed many different cases. Perhaps it could help for fdo#56976 (see https://bugs.freedesktop.org/show_bug.cgi?id=56976) for example.
Comment 11 Lennard Wasserthal 2012-11-21 09:16:44 UTC
I guess not. The bug I reported is a data manipulation/file save bug, no gui issue.
Comment 12 Caolán McNamara 2012-11-21 11:14:47 UTC
I can't imagine that this fix has a bearing on the pptx problem. This stuff only affects dialog/widgets that sort of thing, and what it wouldn't even apply to 3-6 anyway. Must just be a coincidence