Resolves: fdo#57090 visual glitches on MacOSX with borders + layout

We need to force a resync of the borders of a borderwindow onto
its client window when the borders change when layout is active,
otherwise we are doing out calculations using the old borders
and it all turns into a pile of junk

Change-Id: I7dbff0b30aad41779f0f295498af6a492ddf5430